components/profile-controller/manifests/kustomize/components/istio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: profiles-kfam
  labels: {}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
  ingress:
    - ports:
        - protocol: TCP
          port: http-kfam
      from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kubeflow
  policyTypes:
    - Ingress
